--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-redux": "^8.0.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "shelljs": "^0.8.5"
   }
 }
